cutoff fix

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ section img#stars {
 
 section img#mountains_front {
     z-index: 10;
-    position: top;
+    position: absolute;
 }
 
 section h2 {
